package ClientBridge

import (
	blepethclient "blep.ai/data/chain/ethereum/ethclient"
	timestamp "github.com/golang/protobuf/ptypes/timestamp"
	protoreflect "google.golang.org/protobuf/reflect/protoreflect"

	"github.com/ethereum/go-ethereum/accounts/abi"
	"github.com/ethereum/go-ethereum/core/types"
	"github.com/rs/zerolog/log"
)

type SmartContract struct{}

func (sc *SmartContract) Message(eventName string, contractAbi *abi.ABI, vLog types.Log, timestamp *timestamp.Timestamp) protoreflect.ProtoMessage {
	switch eventName {
	case "AdminChanged":
		e := new(ClientBridgeAdminChanged)
		if err := blepethclient.UnpackLog(*contractAbi, e, eventName, vLog); err != nil {
			log.Error().Err(err).Msg("Failed to unpack log")
			return nil
		}

		return &AdminChanged{
			Ts:            timestamp,
			PreviousAdmin: e.PreviousAdmin.Bytes(),
			NewAdmin:      e.NewAdmin.Bytes(),
		}
	case "Upgraded":
		e := new(ClientBridgeUpgraded)
		if err := blepethclient.UnpackLog(*contractAbi, e, eventName, vLog); err != nil {
			log.Error().Err(err).Msg("Failed to unpack log")
			return nil
		}

		return &Upgraded{
			Ts:             timestamp,
			Implementation: e.Implementation.Bytes(),
		}
	}
	return nil
}
